--- a/src/index.css
+++ b/src/index.css
@@ -1,57 +1,50 @@
 :root {
   --main-bg-color: rgb(29,29,36);
   --main-bg-color: linear-gradient(90deg, rgba(29,29,36,1) 0%, rgba(1,9,10,1) 0%, rgba(2,0,36,1) 100%);
+  --sec-bg-color: rgb(0,212,255);
+  --sec-bg-color: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(9,9,121,1) 0%, rgba(2,0,36,1) 100%);
+
 }
 
 body{
   margin: 0 auto;
   color:white;
 }
+
 .cabecera{
   text-align: center;
-  /* color:white; */
   font-family: 'Architects Daughter', cursive;
   background: var(--main-bg-color);
-  /* background: rgb(29,29,36);
-  background: linear-gradient(90deg, rgba(29,29,36,1) 0%, rgba(1,9,10,1) 0%, rgba(2,0,36,1) 100%); */
 }
 
 h1{
   display:inline-block;
   font-weight: 700;
 }
+
 .navegacion{
   height: 2.5rem;
   -webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.75);
   background: var(--main-bg-color);
-  /* background: rgb(29,29,36);
-  background: linear-gradient(90deg, rgba(29,29,36,1) 0%, rgba(1,9,10,1) 0%, rgba(2,0,36,1) 100%);   */
   justify-content: space-between;
   align-items: center;
   display: flex;
+  flex-wrap: nowrap;
+  font-family: 'Architects Daughter', cursive;
 }
-a{
+
+.enlace{
+  font-size: 1rem;
   color: white;
   text-decoration: none;
   margin: 0 1rem;
-  flex-wrap: nowrap;
-}
-nav a{
-  font-size: 1rem;
-}
-nav a:hover{
-  color:yellow;
+  transition: 0.5s;
 }
 
-.Pprincipales{
-  font-family: 'Architects Daughter', cursive;
-  /* color:white; */
-  text-align: center;
-  margin: 0 auto;
-  background: rgb(0,212,255);
-  background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(9,9,121,1) 0%, rgba(2,0,36,1) 100%);
+.enlace:hover{
+  color:yellow;
 }
 
 .tituloPP{
@@ -63,6 +56,13 @@ nav a:hover{
   display: inline-block;
 }
 
+.Pprincipales{
+  font-family: 'Architects Daughter', cursive;
+  text-align: center;
+  margin: 0 auto;
+  background: var(--sec-bg-color);
+}
+
 #imagen{
   width: 9rem;
   height: 9rem;
@@ -71,8 +71,7 @@ nav a:hover{
 }
 
 .contenedor{
-  background: rgb(0,212,255);
-  background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(9,9,121,1) 0%, rgba(2,0,36,1) 100%);
+  background: var(--sec-bg-color);
   display: flex;
   flex-wrap: wrap;
   font-family: 'Architects Daughter', cursive;
@@ -85,19 +84,21 @@ nav a:hover{
 .caja{
   text-align: center;
   background: var(--main-bg-color);
-  /* background: rgb(29,29,36);
-  background: linear-gradient(90deg, rgba(29,29,36,1) 0%, rgba(1,9,10,1) 0%, rgba(2,0,36,1) 100%);   */
-  margin: 1rem 0;
   width: 18%;
   height: auto;
   box-sizing: border-box;
   margin: 1%;
+  margin-bottom: 1rem;
   border-radius: 3%;
-  color:white;
   -webkit-box-shadow: 2px 3px 13px 1px rgba(0,0,0,0.75);
   -moz-box-shadow: 2px 3px 13px 1px rgba(0,0,0,0.75);
   box-shadow: 2px 3px 13px 1px rgba(0,0,0,0.75);
   cursor: pointer;
+  transition: transform .2s;
+}
+
+.caja:hover{
+  transform: scale(1.05); 
 }
 
 .infoTarjeta p{
@@ -106,60 +107,28 @@ nav a:hover{
 
 @media screen and (max-width: 900px) {
   .caja{
-      text-align: center;
-      background: var(--main-bg-color);
-      /* background: rgb(29,29,36);
-      background: linear-gradient(90deg, rgba(29,29,36,1) 0%, rgba(1,9,10,1) 0%, rgba(2,0,36,1) 100%);   */
-      margin: 1rem 0;
       width: 23%;
-      height: auto;
-      box-sizing: border-box;
       margin: 1%;
-      border-radius: 3%;
   }
 }
 
 @media screen and (max-width: 767px) {
   .caja{
-      text-align: center;
-      background: var(--main-bg-color);
-      /* background: rgb(29,29,36);
-      background: linear-gradient(90deg, rgba(29,29,36,1) 0%, rgba(1,9,10,1) 0%, rgba(2,0,36,1) 100%);   */
-      margin: 1rem 0;
       width: 31%;
-      height: auto;
-      box-sizing: border-box;
       margin: 1%;
-      border-radius: 3%;
   }
 }
 
 @media screen and (max-width: 590px) {
   .caja{
-      text-align: center;
-      background: var(--main-bg-color);
-      /* background: rgb(29,29,36);
-      background: linear-gradient(90deg, rgba(29,29,36,1) 0%, rgba(1,9,10,1) 0%, rgba(2,0,36,1) 100%);   */
-      margin: 1rem 0;
       width: 48%;
-      height: auto;
-      box-sizing: border-box;
       margin: 1%;
-      border-radius: 3%;
   }
 }
 
 @media screen and (max-width: 370px) {
   .caja{
-      text-align: center;
-      background: var(--main-bg-color);
-      /* background: rgb(29,29,36);
-      background: linear-gradient(90deg, rgba(29,29,36,1) 0%, rgba(1,9,10,1) 0%, rgba(2,0,36,1) 100%);   */
-      margin: 1rem 0;
       width: 98%;
-      height: auto;
-      box-sizing: border-box;
       margin: 1%;
-      border-radius: 3%;
   }
 }
