--- a/src/index.css
+++ b/src/index.css
@@ -82,10 +82,15 @@ h1{
   height: 20rem;
   transition: transform .2s;
   cursor: pointer;
+  opacity: 0.8;
+  -webkit-box-shadow: 0px 0px 9px -1px rgba(255,255,255,1);
+  -moz-box-shadow: 0px 0px 9px -1px rgba(255,255,255,1);
+  box-shadow: 0px 0px 9px -1px rgba(255,255,255,1);
 }
 
 .imagenesCasas:hover{
-  transform: scale(1.05); 
+  transform: scale(1.05);
+  opacity: 1;
 }
 
 .contenedorImagenes{
